\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%% some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg

\name{NEWS}
\title{News for Package 'polyCub'}


\section{Changes in polyCub version 0.4-0 (2013-11-01)}{

  \itemize{
    \item thorough optimization of \code{polyCub.SV()}-related code
    resulted in about 27\% speed-up:
    \itemize{
      \item use \code{mapply()} instead of a \code{for}-loop
      \item avoid \code{cbind()}
      \item use \code{tcrossprod()}
      \item less object copying
    }

    \item \CRANpkg{rgeos} (and therefore the GEOS library) is no longer
    required (moved from Imports to Suggests).

    \item \code{coerce}-methods between \code{"Polygons"} and
    \code{"gpc.poly"} have been removed from the package.

    \item \code{gpc2owin} and \code{owin2gpc} have been dropped from
    \CRANpkg{spatstat} since version 1.34-0 and are now
    included in \pkg{polyCub}.

    \item A \code{polyregion} of class \code{"SpatialPolygons"}
    of length more than 1 now works in \code{polyCub}-methods.

    \item Use aspect ratio of 1 in \code{plotpolyf()}.
  }

}



\section{Changes in polyCub version 0.3-1 (2013-08-22)}{

  \itemize{
    \item This version solely fixes a few typos and a technical note
    from \command{R CMD check} in the current R development version
    (also import packages into the \file{NAMESPACE} which are listed
    in the \dQuote{Depends:} field).
  }

}



\section{Changes in polyCub version 0.3-0 (2013-07-06)}{

  \itemize{
    \item New cubature method \code{polyCub.iso()} specific to isotropic
    functions (thanks to Emil Hedevang for the basic idea).
    \item New function \code{plotpolyf()} to plot a polygonal domain on
    top of an image of a bivariate function.
    \item The package now depends on \R >= 2.15.0 (for \code{.rowSums()}).
    \item The package no longer registers \code{"owin"} as an \acronym{S4}-class