@@ -4,7 +4,7 @@
 ### a copy of which is available at http://www.r-project.org/Licenses/.
 ###
 ### Copyright (C) 2012-2013 Sebastian Meyer
-### Time-stamp: <[xylist.R] by SM Fre 01/11/2013 09:45 (CET)>
+### Time-stamp: <[xylist.R] by SM Mon 04/11/2013 22:06 (CET)>
 ###
 ### Convert various polygon classes to a simple "xylist"
 ################################################################################
@@ -15,10 +15,10 @@
 ##' Different packages concerned with spatial data use different polygon
 ##' specifications, which sometimes becomes very confusing (see Details below).
 ##' To be compatible with the various polygon classes, package \pkg{polyCub}
-##' uses an (internal) S3 class \code{"xylist"}, which represents
+##' uses an S3 class \code{"xylist"}, which represents
 ##' polygons by their core feature only, a list of lists of vertex coordinates
 ##' (see the "Value" section below).
-##' The internal generic function \code{xylist} can deal with the
+##' The generic function \code{xylist} can deal with the
 ##' following polygon classes:
 ##' \itemize{
 ##' \item{\code{"\link[spatstat:owin.object]{owin}"} from package \pkg{spatstat}}
@@ -28,6 +28,9 @@
 ##' (as well as \code{"\link[sp:Polygon-class]{Polygon}"} and
 ##' \code{"\link[sp:SpatialPolygons-class]{SpatialPolygons}"})}
 ##' }
+##' The (somehow useless) default \code{xylist}-method
+##' does not perform any transformation but only checks that the polygons are
+##' not closed (first vertex not repeated).
 ##' 
 ##' Different packages concerned with spatial data use different polygon
 ##' specifications with respect to:
@@ -50,13 +53,12 @@
 ##' @param ... (unused) argument of the generic.
 ##' @return Applying \code{xylist} to a polygon object, one gets a simple list,
 ##' where each component (polygon) is a list of \code{"x"} and \code{"y"}
-##' coordinates, which give the coordinates of the vertices of the polygon
-##' following \pkg{spatstat}'s \code{"owin"} convention
-##' (anticlockwise order without repeating any vertex).
+##' coordinates. These represent vertex coordinates following \pkg{spatstat}'s
+##' \code{"owin"} convention (anticlockwise order without repeating any vertex).
+##' The opposite vertex order can be retained for the \pkg{sp}-classes
+##' by the non-default use with \code{reverse=FALSE}.\cr
 ##' Additional elements like \code{"area"} and \code{"hole"} in each
-##' component are retained. The (somehow useless) default \code{xylist}-method
-##' does not perform any transformation but only checks that the polygons are
-##' not closed (first vertex not repeated).
+##' component are retained.
 ##' @author Sebastian Meyer\cr 
 ##' The implementation of the \code{"gpc.poly"}-method of \code{xylist}
 ##' depends on functionality of the \pkg{spatstat} package and borrows
@@ -65,9 +67,11 @@
 ##' dropped) authored by Adrian Baddeley and Rolf Turner.
 ##' @name xylist
 ##' @keywords spatial methods
+##' @export
 xylist <- function (object, ...) UseMethod("xylist")
 
 ##' @method xylist owin
+##' @S3method xylist owin
 ##' @rdname xylist
 ##' @importFrom spatstat is.polygonal
 xylist.owin <- function (object, ...) {
@@ -77,6 +81,7 @@ xylist.owin <- function (object, ...) {
 }
 
 ##' @method xylist gpc.poly
+##' @S3method xylist gpc.poly
 ##' @rdname xylist
 ##' @importFrom spatstat area.xypolygon reverse.xypolygon
 xylist.gpc.poly <- function (object, ...)
@@ -97,34 +102,40 @@ xylist.gpc.poly <- function (object, ...)
 }
 
 ##' @method xylist SpatialPolygons
+##' @S3method xylist SpatialPolygons
 ##' @rdname xylist
-xylist.SpatialPolygons <- function (object, ...)
+##' @inheritParams xylist.Polygons
+xylist.SpatialPolygons <- function (object, reverse = TRUE, ...)
 {
-    unlist(lapply(object@polygons, xylist.Polygons),
+    unlist(lapply(object@polygons, xylist.Polygons, reverse=reverse, ...),
            recursive=FALSE, use.names=FALSE)
 }
     
 ##' @method xylist Polygons
+##' @S3method xylist Polygons
 ##' @rdname xylist
-xylist.Polygons <- function (object, ...)
+##' @param reverse logical (\code{TRUE}) indicating if the vertex order of the
+##' \pkg{sp} classes should be reversed to get the \code{xylist}/\code{owin}
+##' convention.
+xylist.Polygons <- function (object, reverse = TRUE, ...)
 {
-      pls <- object@Polygons
-      lapply(pls, function (sr) {
-          coords <- coordinates(sr)
-          n <- nrow(coords) - 1   # number of vertices
-          list(x = coords[seq.int(n,1),1], # reverse direction to get
-               y = coords[seq.int(n,1),2], # "xylist"/"owin" convention
-               hole = sr@hole,
-               area = sr@area)
-      })
+    lapply(object@Polygons, function (sr) {
+        coords <- coordinates(sr)
+        n <- nrow(coords) - 1L   # number of vertices
+        idxs <- if (reverse) seq.int(n,1) else seq_len(n)
+        list(x = coords[idxs,1L], y = coords[idxs,2L],
+             hole = sr@hole, area = sr@area)
+    })
 }
 
 ##' @method xylist Polygon
+##' @S3method xylist Polygon
 ##' @rdname xylist
-xylist.Polygon <- function (object, ...)
-    xylist.Polygons(as(object,"Polygons"))
+xylist.Polygon <- function (object, reverse = TRUE, ...)
+    xylist.Polygons(as(object,"Polygons"), reverse=reverse, ...)
 
 ##' @method xylist default
+##' @S3method xylist default
 ##' @rdname xylist
 xylist.default <- function (object, ...) {
     lapply(object, function(xy) {
@@ -138,10 +149,3 @@ xylist.default <- function (object, ...) {
         poly
     })
 }
-
-
-## @name coerce,Polygon,Polygons-method
-## @exportMethod coerce
-## @rdname xylist
-setAs(from = "Polygon", to = "Polygons",
-      def = function (from) Polygons(list(from), "Polygon"))
